# fakebot

./: CMakeLists.txt  FakeBot_single_file.cpp  README.md  README_BUILD.txt  build_windows.bat  build_windows.ps1  rules.txt
.github/workflows/: windows-build.yml
src/: ChatBot.cpp  ChatBot.h  Rule.h  RuleLoader.cpp  RuleLoader.h  TextUtils.cpp  TextUtils.h  main.cpp
